HW1/E-1.2.28-OrderCheck/wdir_msg/compile.err

OrderCheck.java:12: error: ';' expected
        System.out.println(c)
                             ^
1 error


